@@ -6,6 +6,7 @@ development home at https://github.com/projectestac/agora_nodes
 Changes in progress
 ---------------------------------------------------------------------------------------
 - CSV: Included first version of the import-users-from-csv-with-meta plugin
+- If user is not logged in, redirects at login screen on BuddyPress tabs 
 
 
 Changes 15.03.20
